Remove bitmap cache handling from VideoStream

We don't support bitmap caching anyway and the upstream implementation
does the same we would do here, but without crashing.

BUG: 489097


(cherry picked from commit 14c5689ffb36b5741d64191c8e849faa21a0f55f)

Co-authored-by: Arjen Hiemstra <ahiemstra@heimr.nl>